# ttytype

./: README.md  pyproject.toml
src/ttytype/: __main__.py  cli.py  game.py  stats.py  words.py
tests/: test_stats.py
