[project]
name = "ttytype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jake Van Slyke", email = "jakervanslyke@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ttytype = "ttytype.cli:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
